--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>Frontend Mentor | Article preview component</title>
   </head>
   <body
-    class="bg-Light-grayish-blue place-items-center font-[var(--font-main)]"
+    class="bg-Light-grayish-blue place-items-center font-[family-name:var(--font-main)]"
   >
     <!-- Main layout container -->
     <main
