make it to 2xl screens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>Frontend Mentor | Article preview component</title>
   </head>
   <body
-    class="bg-Light-grayish-blue place-items-center font-[family-name:var(--font-main)]"
+    class="bg-Light-grayish-blue place-items-center place-content-center font-[family-name:var(--font-main)]"
   >
     <!-- Main layout container -->
     <main
@@ -45,11 +45,11 @@
 
       <!-- Main content Section -->
       <section
-        class="main__info relative flex flex-col gap-3 bg-white rounded-b-xl xl:rounded-bl-none xl:rounded-r-xl sm:text-xl xl:text-[16px] xl:after:absolute xl:after:content-[''] xl:after:border-[18px] xl:after:border-solid xl:after:border-t-Very-dark-grayish-blue xl:after:border-transparent xl:after:right-8 xl:after:bottom-15.5 xl:after:opacity-0 xl:after:transition-all xl:after:duration-100"
+        class="main__info relative flex flex-col gap-3 bg-white rounded-b-xl xl:rounded-bl-none xl:rounded-r-xl sm:text-xl xl:text-[16px] xl:after:absolute xl:after:content-[''] xl:after:border-[18px] xl:after:border-solid xl:after:border-t-Very-dark-grayish-blue xl:after:border-transparent xl:after:right-8 xl:after:bottom-15.5 xl:after:opacity-0 xl:after:transition-all xl:after:duration-100 2xl:text-2xl 2xl:gap-8"
       >
         <!-- Article Title -->
         <h1
-          class="px-[2.08rem] pt-9 font-bold tracking-[.01rem] text-[1em]/normal xl:text-xl/normal xl:tracking-[.0125rem] text-Very-dark-grayish-blue"
+          class="px-[2.08rem] pt-9 font-bold tracking-[.01em] text-[1em]/normal xl:text-xl/normal 2xl:text-[1em] xl:tracking-[.0125rem] text-Very-dark-grayish-blue"
         >
           Shift the overall look and feel by adding these wonderful touches to
           furniture in your home
